Added tests, fixed paths and namespaces

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -1,2 +1,3 @@
 services:
-  Shopping\ApiTKCommonBundle\Util\ControllerReflector: ~
+  Shopping\ApiTKCommonBundle\Util\ControllerReflector:
+    autowire: true
