--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
   },
   "require": {
     "php": "^7.1.3",
+    "nelmio/api-doc-bundle": "^3.2",
     "symfony/config": "^4.1",
     "symfony/dependency-injection": "^4.1",
     "symfony/framework-bundle": "^4.1"
@@ -35,6 +36,7 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.12",
     "phpmd/phpmd": "^2.6",
+    "phpstan/phpstan": "^0.9",
     "phpunit/phpunit": "^7.0",
     "sebastianfeldmann/captainhook": "^2.1",
     "symfony/phpunit-bridge": "^4.0"
