--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping/apitk-common-bundle",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "license": "MIT",
   "type": "symfony-bundle",
   "description": "",
@@ -29,6 +29,7 @@
   "require": {
     "php": "^7.1.3",
     "nelmio/api-doc-bundle": "^3.2",
+    "sensio/framework-extra-bundle": "^5.2",
     "symfony/config": "^4.1",
     "symfony/dependency-injection": "^4.1",
     "symfony/framework-bundle": "^4.1"
