--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "check24/apitk-common-bundle",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "license": "MIT",
   "type": "symfony-bundle",
   "description": "",
@@ -30,14 +30,16 @@
     "php": "^7.1.3",
     "nelmio/api-doc-bundle": "^3.2",
     "sensio/framework-extra-bundle": "^5.2",
-    "symfony/config": "^4.1",
-    "symfony/dependency-injection": "^4.1",
-    "symfony/framework-bundle": "^4.1"
+    "symfony/config": ">= 4.3 <6.0",
+    "symfony/dependency-injection": ">= 4.3 <6.0",
+    "symfony/framework-bundle": ">= 4.3 <6.0"
   },
   "require-dev": {
+    "doctrine/orm": "^2.6",
+    "doctrine/doctrine-bundle": ">=1.8 <3.0",
     "friendsofphp/php-cs-fixer": "^2.12",
     "phpmd/phpmd": "^2.6",
-    "phpstan/phpstan": "^0.9",
+    "phpstan/phpstan": "^0.11",
     "phpunit/phpunit": "^7.0",
     "sebastianfeldmann/captainhook": "^2.1",
     "symfony/phpunit-bridge": "^4.0"
