--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,4 @@
 parameters:
-        autoload_directories:
-                - %rootDir%/../../../Tests
-        excludes_analyse:
-                - %rootDir%/../../../vendor
+    excludes_analyse:
+        - ./vendor
+        - ./DependencyInjection
