--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -1,3 +1,4 @@
 services:
-  Shopping\ApiTKCommonBundle\Util\ControllerReflector:
-    autowire: true
+    Shopping\ApiTKCommonBundle\Util\ControllerReflector:
+        arguments:
+            $container: '@service_container'
