--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,53 @@
 {
-  "name": "check24/apitk-common-bundle",
-  "version": "2.0.2",
-  "license": "MIT",
-  "type": "symfony-bundle",
-  "description": "",
-  "authors": [
-    {
-      "name": "Michael Wolf",
-      "email": "wulf1337@gmail.com"
+    "name": "check24/apitk-common-bundle",
+    "license": "MIT",
+    "type": "symfony-bundle",
+    "description": "Contains classes, interfaces and traits that are shared between check24/apitk-* bundles",
+    "authors": [
+        {
+            "name": "Michael Wolf",
+            "email": "wulf1337@gmail.com"
+        },
+        {
+            "name": "Alexander Dormann",
+            "email": "alexdo@alexdo.de"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Shopping\\ApiTKCommonBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
     },
-    {
-      "name": "Alexander Dormann",
-      "email": "alexdo@alexdo.de"
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "require": {
+        "php": "^7.1.3",
+        "nelmio/api-doc-bundle": "^3.2",
+        "sensio/framework-extra-bundle": "^5.2",
+        "symfony/config": ">= 4.3 <6.0",
+        "symfony/dependency-injection": ">= 4.3 <6.0",
+        "symfony/framework-bundle": ">= 4.3 <6.0"
+    },
+    "require-dev": {
+        "doctrine/orm": "^2.6",
+        "doctrine/doctrine-bundle": ">=1.8 <3.0",
+        "friendsofphp/php-cs-fixer": "^2.12",
+        "phpmd/phpmd": "^2.6",
+        "phpstan/phpstan": "^0.11",
+        "phpunit/phpunit": "^7.0",
+        "captainhook/captainhook": "^5.8",
+        "symfony/phpunit-bridge": "^4.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "\\SebastianFeldmann\\CaptainHook\\Composer\\Cmd::install"
+        ]
     }
-  ],
-  "autoload": {
-    "psr-4": { "Shopping\\ApiTKCommonBundle\\": "" },
-    "exclude-from-classmap": [
-      "/Tests/"
-    ]
-  },
-  "config": {
-    "preferred-install": {
-      "*": "dist"
-    },
-    "sort-packages": true
-  },
-  "require": {
-    "php": "^7.1.3",
-    "nelmio/api-doc-bundle": "^3.2",
-    "sensio/framework-extra-bundle": "^5.2",
-    "symfony/config": ">= 4.3 <6.0",
-    "symfony/dependency-injection": ">= 4.3 <6.0",
-    "symfony/framework-bundle": ">= 4.3 <6.0"
-  },
-  "require-dev": {
-    "doctrine/orm": "^2.6",
-    "doctrine/doctrine-bundle": ">=1.8 <3.0",
-    "friendsofphp/php-cs-fixer": "^2.12",
-    "phpmd/phpmd": "^2.6",
-    "phpstan/phpstan": "^0.11",
-    "phpunit/phpunit": "^7.0",
-    "sebastianfeldmann/captainhook": "^2.1",
-    "symfony/phpunit-bridge": "^4.0"
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "\\SebastianFeldmann\\CaptainHook\\Composer\\Cmd::install"
-    ]
-  }
 }
