--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.1.3 || ^8.0",
         "nelmio/api-doc-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/config": ">= 4.3 <6.0",
@@ -36,13 +36,14 @@
         "symfony/framework-bundle": ">= 4.3 <6.0"
     },
     "require-dev": {
-        "doctrine/orm": "^2.6",
+        "captainhook/captainhook": "^5.8",
         "doctrine/doctrine-bundle": ">=1.8 <3.0",
+        "doctrine/orm": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.12",
         "phpmd/phpmd": "^2.6",
-        "phpstan/phpstan": "^0.11",
-        "phpunit/phpunit": "^7.0",
-        "captainhook/captainhook": "^5.8",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^9.3",
         "symfony/phpunit-bridge": "^4.0"
     },
     "scripts": {
