--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": "^7.1.3 || ^8.0",
         "nelmio/api-doc-bundle": "^3.2",
-        "sensio/framework-extra-bundle": "^5.2",
+        "sensio/framework-extra-bundle": "^5.2 || ^6.0",
         "symfony/config": ">= 4.3 <6.0",
         "symfony/dependency-injection": ">= 4.3 <6.0",
         "symfony/framework-bundle": ">= 4.3 <6.0"
