--- a/composer.json
+++ b/composer.json
@@ -28,18 +28,20 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.1.3 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "nelmio/api-doc-bundle": "^3.2",
-        "sensio/framework-extra-bundle": "^5.2 || ^6.0",
-        "symfony/config": ">= 4.3 <6.0",
-        "symfony/dependency-injection": ">= 4.3 <6.0",
-        "symfony/framework-bundle": ">= 4.3 <6.0"
+        "phpstan/phpstan-deprecation-rules": "^0.12.6",
+        "sensio/framework-extra-bundle": "^5.3 || ^6.0",
+        "symfony/config": ">= 5.3 <6.0",
+        "symfony/dependency-injection": ">= 5.3 <6.0",
+        "symfony/framework-bundle": ">= 5.3 <6.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "captainhook/captainhook": "^5.8",
-        "doctrine/doctrine-bundle": ">=1.8 <3.0",
+        "doctrine/doctrine-bundle": ">=2.3 <3.0",
         "doctrine/orm": "^2.6",
-        "friendsofphp/php-cs-fixer": "^2.12",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpmd/phpmd": "^2.6",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^0.12",
@@ -49,6 +51,20 @@
     "scripts": {
         "post-install-cmd": [
             "\\SebastianFeldmann\\CaptainHook\\Composer\\Cmd::install"
+        ],
+        "test:php-cs-fixer": "@php vendor/bin/php-cs-fixer fix --verbose --dry-run",
+        "test:phpstan": "@php vendor/bin/phpstan analyse -c phpstan.neon .",
+        "test:phpmd": "@php vendor/bin/phpmd ./ text ruleset.xml --exclude vendor",
+        "test:phpunit": "@php vendor/bin/phpunit --verbose",
+        "test": [
+            "@test:php-cs-fixer",
+            "@test:phpstan",
+            "@test:phpmd",
+            "@test:phpunit"
+        ],
+        "fix:php-cs-fixer": "@php vendor/bin/php-cs-fixer fix --verbose",
+        "fix": [
+            "@fix:php-cs-fixer"
         ]
     }
 }
