--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,11 @@
 parameters:
-    level: 1
+    level: 8
+    paths:
+        - .
     excludes_analyse:
         - ./vendor
         - ./DependencyInjection
+        - ./Tests
+    checkGenericClassInNonGenericObjectType: false
+includes:
+    - vendor/phpstan/phpstan-deprecation-rules/rules.neon
