--- a/composer.json
+++ b/composer.json
@@ -28,25 +28,25 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "nelmio/api-doc-bundle": "^3.2",
-        "sensio/framework-extra-bundle": "^5.3 || ^6.0",
-        "symfony/config": ">= 5.3 <6.0",
-        "symfony/dependency-injection": ">= 5.3 <6.0",
-        "symfony/framework-bundle": ">= 5.3 <6.0"
+        "sensio/framework-extra-bundle": "^6.0",
+        "symfony/config": "^5.3 || ^6.0",
+        "symfony/dependency-injection": "^5.3 || ^6.0",
+        "symfony/framework-bundle": "^5.3 || ^6.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "captainhook/captainhook": "^5.8",
+        "captainhook/captainhook": "^5.10.6",
         "doctrine/doctrine-bundle": ">=2.3 <3.0",
-        "doctrine/orm": "^2.6",
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "phpmd/phpmd": "^2.6",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-deprecation-rules": "^0.12.6",
-        "phpunit/phpunit": "^9.3",
-        "symfony/phpunit-bridge": "^4.0"
+        "doctrine/orm": "^2.6 || ^3.0",
+        "friendsofphp/php-cs-fixer": "^3.4.0",
+        "phpmd/phpmd": "^2.11.1",
+        "phpspec/prophecy-phpunit": "^2.0.1",
+        "phpstan/phpstan": "^1.3.3",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpunit/phpunit": "^9.5.11",
+        "symfony/phpunit-bridge": "^6.0"
     },
     "scripts": {
         "post-install-cmd": [
